apps/tencentcloud/zot/httproute-internal.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: zot-internal
  namespace: zot
spec:
  parentRefs:
    - kind: Gateway
      name: internal-https
      namespace: infra
  hostnames:
    - cr-qcloud.pingcap.net
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: zot
          port: 5000
          weight: 1
      timeouts:
        request: 0s
